# CSM-AI-Service

./: .gitignore  README.md  README_BUILD.md  __init__.py  basic_settings.yaml  cli.py  conda-environment.yml  init_database.py  kb_settings.yaml  model_settings.yaml  pip-setup.txt  prompt_settings.yaml  pyproject.toml  requirements.txt  settings.py  setup.py  startup.py  utils.py
docs/: README_BUILD.md  agent_architecture_v2.md  poetry_dev.md
server/: utils.py
server/api_server/: agent_chat_routes.py  api_schemas.py  chat_manager_routes.py  chat_routes.py  kb_routes.py  pdf_extract_routes.py  platform_warning_routes.py  server_app.py  tickets_routes.py  warning_routes.py
server/callback_handler/: conversation_callback_handler.py  message_callback_handler.py  user_callback_handler.py
server/chat/: agent_chat.py  agent_chat.py.bak  chat.py  file_chat.py  kb_chat.py  mem_chat.py  similar_mem_chat.py
server/chat_agent/: agentStatus.py  agent_chat.py  alert_agent.py  node.py
server/chat_manager/: chat_manager.py
server/csm_analyze/protection_pdf_extract/: extract_api.py  helper.py  keywords_helper.py  outline_helper.py  table_helper.py  table_info.py  table_utils.py
server/csm_analyze/ticket_analyze/: affect_info.py
server/csm_analyze/warning_analysis/: extract_structed_data.py  gen_notice.py  report_analyze.py
server/csm_analyze/warning_analysis/extract_info/: helper.py  pdfAlarmReportParser.py  pdfExtractText.py  scanPdfAlarmReportParser.py  scanPdfExtractText.py  wordAlarmReportParser.py  wordExtractText.py
server/db/models/: base.py  conversation_model.py  knowledge_base_model.py  knowledge_file_model.py  message_model.py  user_message_model.py
server/db/repository/: conversation_repository.py  knowledge_base_repository.py  message_repository.py
server/file_rag/document_loaders/: FilteredCSVloader.py
server/file_rag/retrievers/: base.py  vectorstore.py
server/file_rag/text_splitter/: ali_text_splitter.py  chinese_recursive_text_splitter.py
server/knowledge_base/: kb_doc_api.py  migrate.py  utils.py
server/knowledge_base/kb_cache/: base.py  faiss_cache.py
server/knowledge_base/kb_service/: base.py  faiss_kb_service.py
server/knowledge_base/model/: kb_document_model.py
server/memory/: conversation_db_buffer_memory.py
server/test/: config.json  test_agent.py  test_embedding.py  test_llm.py  test_tools.py
server/ticket_analyze/: affect_info.py
server/user_base/: faiss_user_service.py
server/warning_analysis/: chromadb_kb_service.py  convert_tools.py  extract_pdf_info.py  extract_structed_data.py  gen_warning_notice.py  report_analyze.py  safe_chroma.py  warning_api.py
server/warning_analysis/extract_info/: helper.py  pdfAlarmReportParser.py  pdfExtractText.py  scanPdfAlarmReportParser.py  scanPdfExtractText.py  wordAlarmReportParser.py  wordExtractText.py
src/csm_ai_service/: cli.py  init_database.py  settings.py  startup.py  utils.py
src/csm_ai_service/server/: utils.py
src/csm_ai_service/server/api_server/: api_schemas.py  audit_result_routes.py  audit_rule_routes.py  chat_manager_routes.py  chat_routes.py  contract_routes.py  kb_routes.py  ocr_routes.py  pdf_extract_routes.py  platform_warning_routes.py  server_app.py  task_routes.py  tickets_routes.py  warning_routes.py
src/csm_ai_service/server/conversation/callback_handler/: message_callback_handler.py  user_callback_handler.py
src/csm_ai_service/server/conversation/chat/: chat.py  file_chat.py  kb_chat.py  mem_chat.py  similar_mem_chat.py  utils.py
src/csm_ai_service/server/conversation/chat_agent/: agent_chat.py  alert_agent.py  node.py
src/csm_ai_service/server/conversation/chat_manager/: chat_manager.py
src/csm_ai_service/server/conversation/file_rag/: utils.py
src/csm_ai_service/server/conversation/knowledge_base/: kb_api.py  kb_doc_api.py  migrate.py  utils.py
src/csm_ai_service/server/conversation/user_base/: faiss_user_service.py
src/csm_ai_service/server/csm_analyze/protection_pdf_extract/: extract_api.py  helper.py  keywords_helper.py  outline_helper.py  table_helper.py  table_info.py  table_utils.py
src/csm_ai_service/server/csm_analyze/ticket_analyze/: affect_info.py
src/csm_ai_service/server/csm_analyze/warning_analysis/: extract_structed_data.py  gen_notice.py  report_analyze.py
src/csm_ai_service/server/db/: base.py  session.py
src/csm_ai_service/server/db/models/: __init__.py  audit_result_model.py  audit_rule_model.py  contract_model.py  conversation_model.py  knowledge_base_model.py  knowledge_file_model.py  message_model.py  task_model.py  user_message_model.py
src/csm_ai_service/server/db/repository/: __init__.py  audit_result_repository.py  audit_rule_repository.py  contract_repository.py  conversation_repository.py  knowledge_base_repository.py  knowledge_file_repository.py  message_repository.py  task_repository.py  (+1 more)
src/csm_ai_service/server/ocr/: ocr_helper.py  single_ocr_engine.py
src/csm_ai_service/server/protection_audit/: ocr_service.py  pdf_extract_service.py  task_queue.py  text_pdf_parser.py
src/csm_ai_service/test_api/: rapiddoc_test.py  test_llm.py
src/csm_ai_service/test_api/pytest/: README_TEST.md  config.py  conftest.py  test_audit_rule_routes.py  test_chat_manager_routes.py  test_chat_routes.py  test_kb_routes.py  test_ocr_contract_task_routes.py  test_pdf_extract_routes.py  test_platform_warning_routes.py  test_ticket_routes.py  test_warning_routes.py
tests/: rapiddoc_test.py  test_embedding.py
(+28 files in other folders)
